# live555-CMake

./: CMakeLists.txt  Live_versions.txt  README.md
live/: CMakeLists.txt  config.linux-with-shared-libraries
live/liveMedia/: CMakeLists.txt  MultiFramedRTPSource.cpp  RTPInterface.cpp
